--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="lib" path="lib/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/apfloat.jar" sourcepath="lib/apfloat-1.6.2.zip"/>
 	<classpathentry kind="lib" path="lib/ejs_math_SpecialFunctions.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/Mosek/6/tools/platform/win32x86/bin/mosek.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar" sourcepath="lib/commons-collections-3.2.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/nzcs/Applications/mosek/6/tools/platform/osx64x86/bin/mosek.jar"/>
+	<classpathentry kind="lib" path="lib/combinatoricslib-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
